--- a/src/Global-Style/style.css
+++ b/src/Global-Style/style.css
@@ -23,7 +23,10 @@ h1{
     margin-top: 20px;
 }
 
-.button-detalhes{
+.detalhes{
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 116px;
     height: 39px;
     background-color:#C70160;;
@@ -32,11 +35,16 @@ h1{
     text-transform: uppercase;
     border-radius: 8px;
     color: #fff;
+    cursor: pointer;
     /*margin-top: 14px;
     margin-bottom: 16px;*/
+
   }
-  
-  .load-more-button{
+.detalhes:hover {
+ width: 117px;
+ height: 40px; 
+}
+.load-more-button{
     display: flex;
     align-items: center;
     justify-content: center;
@@ -52,4 +60,7 @@ h1{
     cursor: pointer;
     width: 380px;
     height: 50px;
+}
+.load-more-button:hover{
+  width: 382px;
 }
